adds API calls, images to DOM, and click functions

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
 <body>
 
+    <div id="button-group"></div>
+
+    <div id="gif-gallery"></div>
 
     <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
