adjusts query string and getGif and generateGif functions to add 10 more gifs

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
 
 <body>
 
+    <form>
+        <div class="form-row">
+            <div class="form-group col-md-2">
+                <label for="">Search</label>
+                <input type="text" class="form-control" id="user-input" placeholder="">
+                <small id="emailHelp" class="form-text text-muted">Try searching for your favorite food.</small>
+            </div>
+            <button type="submit" id="user-submit" class="my-auto btn btn-primary">Submit</button>
+            <button id="more-gifs" class="my-auto btn btn-primary">Show Me More</button>
+        </div>
+    </form>
+
     <div id="button-group"></div>
 
     <div id="gif-gallery"></div>
