adds favorite icon logic to change icon and push gif object to favGifs array

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <small id="emailHelp" class="form-text text-muted">Try searching for your favorite food.</small>
             </div>
             <button type="submit" id="user-submit" class="my-auto btn btn-primary">Submit</button>
-            <button moreid="more-gifs" class="my-auto btn btn-primary">Show Me More</button>
+            <button id="more-gifs" class="my-auto btn btn-primary">Show Me More</button>
         </div>
     </form>
 
