--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
     <form>
         <div class="form-row">
             <div class="form-group col-md-2">
-                <label for="">Search</label>
-                <input type="text" class="form-control" id="user-input" placeholder="">
+                <label for="user-input">Search</label>
+                <input type="text" class="form-control" id="user-input" required="true">
                 <small id="emailHelp" class="form-text text-muted">Try searching for your favorite food.</small>
             </div>
             <button type="submit" id="user-submit" class="my-auto btn btn-primary">Submit</button>
             <button id="more-gifs" class="my-auto btn btn-primary">Show Me More</button>
+            <button id="fav-gifs" class="my-auto btn btn-primary">My Favorites</button>
         </div>
     </form>
 
@@ -33,6 +34,26 @@
 
     <div id="gif-gallery"></div>
 
+    <div class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Did you forget something?</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Please enter a valid term to search.</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 
