--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="col-6">
           <div class="container">
             <div id="submit-row" class="row justify-content-start">
-              <button type="submit" id="user-submit" class="my-auto btn btn-primary">Submit</button>
+              <button id="user-submit" class="my-auto btn btn-primary">Submit</button>
             </div>
             <div id="aux-row" class="row justify-content-start">
               <button id="more-gifs" class="my-auto btn btn-sm btn-success">Show Me More</button>
@@ -84,6 +84,8 @@
   <div id="button-group" class="row flex-wrap no-gutters"></div>
 
   <div id="gif-gallery" class="d-flex flex-wrap"></div>
+
+  <div id="fav-gallery" class="d-flex flex-wrap"></div>
 
   <div class="modal fade" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
