--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </div>
         <div class="col-6 align-self-center">
           <button id="fav-gifs" class="my-auto btn btn-warning">My Favorites</button>
+          <button data-target="#purge-message" id="clear-storage" class="my-auto btn btn-danger">Purge</button>
         </div>
       </div>
     </div>
@@ -65,7 +66,7 @@
         <div class="col-6">
           <div class="container">
             <div id="submit-row" class="row justify-content-start">
-              <button id="user-submit" class="my-auto btn btn-primary">Submit</button>
+              <button data-target="#null-input" id="user-submit" class="my-auto btn btn-primary">Submit</button>
             </div>
             <div id="aux-row" class="row justify-content-start">
               <button id="more-gifs" class="my-auto btn btn-sm btn-success">Show Me More</button>
@@ -84,10 +85,27 @@
   <div id="button-group" class="row flex-wrap no-gutters"></div>
 
   <div id="gif-gallery" class="d-flex flex-wrap"></div>
+  
+  <div id="purge-message" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Favorites Removed</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>Your locally stored favorites have been removed.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  <div id="fav-gallery" class="d-flex flex-wrap"></div>
-
-  <div class="modal fade" tabindex="-1" role="dialog">
+  <div id="null-input" class="modal fade" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
