--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-6">
+        <div class="col-sm-6 col-5">
           <div class="container">
             <div class="row justify-content-end">
               <div class="text-right custom-control custom-switch">
@@ -43,7 +43,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 align-self-center">
+        <div class="col-sm-6 col-7 align-self-center">
           <button id="fav-gifs" class="my-auto btn btn-warning">My Favorites</button>
           <button data-target="#purge-message" id="clear-storage" class="my-auto btn btn-danger">Purge</button>
         </div>
